--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="header-content">
    <div class="header-right">
     <p>営業代行やフルコミ代理店の副業情報を掲載</p>
-    <img src="file:///C:/Users/%E7%9B%B8%E9%A6%AC%E6%98%A5%E8%B2%B4/Desktop/Programing/html/Visual%20Studio%20Code/1.code%E7%B7%B4%E7%BF%92/1.LP/side%20bizz/photo/logo/logo.png">
+    <img src="https://github.com/mainprograming/cide-bizz/blob/main/photo/logo/logo.png?raw=true">
    </div>
    <div class="header-left">
     <a href="#">掲載についてはコチラ</a>
@@ -51,7 +51,7 @@
     <div class="top-contents-what">
       <div class="contents-head">side bizz（サイドビズ）とは？</div>
       <div class="what-content">
-        <img src="file:///C:/Users/%E7%9B%B8%E9%A6%AC%E6%98%A5%E8%B2%B4/Desktop/Programing/html/Visual%20Studio%20Code/1.code%E7%B7%B4%E7%BF%92/1.LP/side%20bizz/photo/cont1/cont1_0.png">
+        <img src="https://github.com/mainprograming/cide-bizz/blob/main/photo/cont1/cont1_0.png?raw=true">
         <p>side bizzは<span class="color-pink">営業職やフリーランスの副業探し、営業代行会社の仕事探し</span>に特化した、業界最大級の会員制プラットフォームです！気軽にできる個人の副業から、ガッツリ稼げる法人のお仕事まで、たくさんの仕事情報が掲載されています。</p>
       </div>
     </div>
@@ -68,12 +68,12 @@
               <p>side bizz会員になれば、クライアントからスカウトが届いたり、営業代行の仕事、代理店商材が簡単に見つかります。“クライアント探し”がとてもラクになります。</p>
             </div>
           </div>
-          <img src="file:///C:/Users/%E7%9B%B8%E9%A6%AC%E6%98%A5%E8%B2%B4/Desktop/Programing/html/Visual%20Studio%20Code/1.code%E7%B7%B4%E7%BF%92/1.LP/side%20bizz/photo/cont2/cont2_1.png">
+          <img src="https://github.com/mainprograming/cide-bizz/blob/main/photo/cont2/cont2_1.png?raw=true">
         </div>
       </div>
       <div class="merit-content02">
         <div id="merit02">
-          <img src="file:///C:/Users/%E7%9B%B8%E9%A6%AC%E6%98%A5%E8%B2%B4/Desktop/Programing/html/Visual%20Studio%20Code/1.code%E7%B7%B4%E7%BF%92/1.LP/side%20bizz/photo/cont2/cont2_2.png">
+          <img src="https://github.com/mainprograming/cide-bizz/blob/main/photo/cont2/cont2_2.png?raw=true">
           <div class="merit-content_text">
             <h1>2</h1>
             <div>
@@ -92,7 +92,7 @@
               <p>side bizzを利用すれば、クライアント企業と交わす面倒な契約手続きが必要なくなるので、“営業”や“セールス”という本質的な仕事だけに専念することができます。</p>
             </div>
           </div>
-          <img src="file:///C:/Users/%E7%9B%B8%E9%A6%AC%E6%98%A5%E8%B2%B4/Desktop/Programing/html/Visual%20Studio%20Code/1.code%E7%B7%B4%E7%BF%92/1.LP/side%20bizz/photo/cont2/cont2_3.png">
+          <img src="https://github.com/mainprograming/cide-bizz/blob/main/photo/cont2/cont2_3.png?raw=true">
         </div>
       </div>
     </div>
@@ -113,7 +113,7 @@
           <h2>1</h2>
         </div>
         <h3>気になる仕事を探す</h3>
-        <img src="file:///C:/Users/%E7%9B%B8%E9%A6%AC%E6%98%A5%E8%B2%B4/Desktop/Programing/html/Visual%20Studio%20Code/1.code%E7%B7%B4%E7%BF%92/1.LP/side%20bizz/photo/cont3/cont3_1.png">
+        <img src="https://github.com/mainprograming/cide-bizz/blob/main/photo/cont3/cont3_1.png?raw=true">
         <p>side bizzには厳選された営業系のお仕事情報が掲載されています。気になる情報にはとりあえずエントリーして、まずは掲載企業と連絡を取り合ったり、自由に打ち合わせしてみましょう！</p>
       </div>
       <div class="using-content">
@@ -122,7 +122,7 @@
           <h2>2</h2>
         </div>
         <h3>営業代行する</h3>
-        <img src="file:///C:/Users/%E7%9B%B8%E9%A6%AC%E6%98%A5%E8%B2%B4/Desktop/Programing/html/Visual%20Studio%20Code/1.code%E7%B7%B4%E7%BF%92/1.LP/side%20bizz/photo/cont3/cont3_2.png">
+        <img src="https://github.com/mainprograming/cide-bizz/blob/main/photo/cont3/cont3_2.png?raw=true">
         <p>一言に「営業」といっても、やるべき業務は様々です。ほとんど簡単なお仕事ですが、業務内容を正確に把握して、クライアントニーズに合った働き方をしましょう！</p>
       </div>
       <div class="using-content">
@@ -131,7 +131,7 @@
           <h2>3</h2>
         </div>
         <h3>報酬を得る</h3>
-        <img src="file:///C:/Users/%E7%9B%B8%E9%A6%AC%E6%98%A5%E8%B2%B4/Desktop/Programing/html/Visual%20Studio%20Code/1.code%E7%B7%B4%E7%BF%92/1.LP/side%20bizz/photo/cont3/cont3_3.png">
+        <img src="https://github.com/mainprograming/cide-bizz/blob/main/photo/cont3/cont3_3.png?raw=true">
         <p>業務内容によって、固定報酬や成果報酬、その両方が貰えるようなケースもあります。面倒な手続きはありませんので、業務内容に沿った所定の報酬を受け取ってください。</p>
       </div>
     </div>
@@ -141,35 +141,35 @@
     <h1>会員登録<span class="color-pink">（無料）</span>すれば全ての仕事情報が閲覧できるようになります。</h1>
     <div class="infomation-contents">
       <div class="infomation-content">
-        <img src="file:///C:/Users/%E7%9B%B8%E9%A6%AC%E6%98%A5%E8%B2%B4/Desktop/Programing/html/Visual%20Studio%20Code/1.code%E7%B7%B4%E7%BF%92/1.LP/side%20bizz/photo/cont4_slick/slick01.jpg">
+        <img src="https://github.com/mainprograming/cide-bizz/blob/main/photo/cont4_slick/slick01.jpg?raw=true">
         <h2>ドイツ風景画像01</h2>
         <p>あああああああああああああああああああああああああああああああああああああああああ</p>
         <h3>報酬目安</h3>
         <h4>下限なし～上限なし</h4>
       </div>
       <div class="infomation-content">
-        <img src="file:///C:/Users/%E7%9B%B8%E9%A6%AC%E6%98%A5%E8%B2%B4/Desktop/Programing/html/Visual%20Studio%20Code/1.code%E7%B7%B4%E7%BF%92/1.LP/side%20bizz/photo/cont4_slick/slick02.jpg">
+        <img src="https://github.com/mainprograming/cide-bizz/blob/main/photo/cont4_slick/slick02.jpg?raw=true">
         <h2>ドイツ風景画像02</h2>
         <p>いいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいい</p>
         <h3>報酬目安</h3>
         <h4>0～1万円</h4>
       </div>
       <div class="infomation-content">
-        <img src="file:///C:/Users/%E7%9B%B8%E9%A6%AC%E6%98%A5%E8%B2%B4/Desktop/Programing/html/Visual%20Studio%20Code/1.code%E7%B7%B4%E7%BF%92/1.LP/side%20bizz/photo/cont4_slick/slick03.jpg">
+        <img src="https://github.com/mainprograming/cide-bizz/blob/main/photo/cont4_slick/slick03.jpg?raw=true">
         <h2>ドイツ風景画像03</h2>
         <p>うううううううううううううううううううううううううううううううううううう</p>
         <h3>報酬目安</h3>
         <h4>1万円～5万円</h4>
       </div>
       <div class="infomation-content">
-        <img src="file:///C:/Users/%E7%9B%B8%E9%A6%AC%E6%98%A5%E8%B2%B4/Desktop/Programing/html/Visual%20Studio%20Code/1.code%E7%B7%B4%E7%BF%92/1.LP/side%20bizz/photo/cont4_slick/slick04.jpg">
+        <img src="https://github.com/mainprograming/cide-bizz/blob/main/photo/cont4_slick/slick04.jpg?raw=true">
         <h2>ドイツ風景画像04</h2>
         <p>ええええええええええええええええええええええええええええええええええええええ</p>
         <h3>報酬目安</h3>
         <h4>5万円～10万円</h4>
       </div>
       <div class="infomation-content">
-        <img src="file:///C:/Users/%E7%9B%B8%E9%A6%AC%E6%98%A5%E8%B2%B4/Desktop/Programing/html/Visual%20Studio%20Code/1.code%E7%B7%B4%E7%BF%92/1.LP/side%20bizz/photo/cont4_slick/slick05.jpg">
+        <img src="https://github.com/mainprograming/cide-bizz/blob/main/photo/cont4_slick/slick05.jpg?raw=true">
         <h2>ドイツ風景画像05</h2>
         <p>おおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおお</p>
         <h3>報酬目安</h3>
@@ -184,16 +184,16 @@
   <div class="media">
     <div class="contents-head" id="contents-head">メディア掲載実績</div>
     <div class="media-contents">
-      <img src="file:///C:/Users/%E7%9B%B8%E9%A6%AC%E6%98%A5%E8%B2%B4/Desktop/Programing/html/Visual%20Studio%20Code/1.code%E7%B7%B4%E7%BF%92/1.LP/side%20bizz/photo/cont5/cont5_1.png">
-      <img src="file:///C:/Users/%E7%9B%B8%E9%A6%AC%E6%98%A5%E8%B2%B4/Desktop/Programing/html/Visual%20Studio%20Code/1.code%E7%B7%B4%E7%BF%92/1.LP/side%20bizz/photo/cont5/cont5_2.png">
-      <img src="file:///C:/Users/%E7%9B%B8%E9%A6%AC%E6%98%A5%E8%B2%B4/Desktop/Programing/html/Visual%20Studio%20Code/1.code%E7%B7%B4%E7%BF%92/1.LP/side%20bizz/photo/cont5/cont5_3.png">
-      <img src="file:///C:/Users/%E7%9B%B8%E9%A6%AC%E6%98%A5%E8%B2%B4/Desktop/Programing/html/Visual%20Studio%20Code/1.code%E7%B7%B4%E7%BF%92/1.LP/side%20bizz/photo/cont5/cont5_4.png">
-      <img src="file:///C:/Users/%E7%9B%B8%E9%A6%AC%E6%98%A5%E8%B2%B4/Desktop/Programing/html/Visual%20Studio%20Code/1.code%E7%B7%B4%E7%BF%92/1.LP/side%20bizz/photo/cont5/cont5_5.png">
-      <img src="file:///C:/Users/%E7%9B%B8%E9%A6%AC%E6%98%A5%E8%B2%B4/Desktop/Programing/html/Visual%20Studio%20Code/1.code%E7%B7%B4%E7%BF%92/1.LP/side%20bizz/photo/cont5/cont5_6.png">
-      <img src="file:///C:/Users/%E7%9B%B8%E9%A6%AC%E6%98%A5%E8%B2%B4/Desktop/Programing/html/Visual%20Studio%20Code/1.code%E7%B7%B4%E7%BF%92/1.LP/side%20bizz/photo/cont5/cont5_7.png">
-      <img src="file:///C:/Users/%E7%9B%B8%E9%A6%AC%E6%98%A5%E8%B2%B4/Desktop/Programing/html/Visual%20Studio%20Code/1.code%E7%B7%B4%E7%BF%92/1.LP/side%20bizz/photo/cont5/cont5_8.png">
-      <img src="file:///C:/Users/%E7%9B%B8%E9%A6%AC%E6%98%A5%E8%B2%B4/Desktop/Programing/html/Visual%20Studio%20Code/1.code%E7%B7%B4%E7%BF%92/1.LP/side%20bizz/photo/cont5/cont5_9.png">
-      <img src="file:///C:/Users/%E7%9B%B8%E9%A6%AC%E6%98%A5%E8%B2%B4/Desktop/Programing/html/Visual%20Studio%20Code/1.code%E7%B7%B4%E7%BF%92/1.LP/side%20bizz/photo/cont5/cont5_10.png">
+      <img src="https://github.com/mainprograming/cide-bizz/blob/main/photo/cont5/cont5_1.png?raw=true">
+      <img src="https://github.com/mainprograming/cide-bizz/blob/main/photo/cont5/cont5_2.png?raw=true">
+      <img src="https://github.com/mainprograming/cide-bizz/blob/main/photo/cont5/cont5_3.png?raw=true">
+      <img src="https://github.com/mainprograming/cide-bizz/blob/main/photo/cont5/cont5_4.png?raw=true">
+      <img src="https://github.com/mainprograming/cide-bizz/blob/main/photo/cont5/cont5_5.png?raw=true">
+      <img src="https://github.com/mainprograming/cide-bizz/blob/main/photo/cont5/cont5_6.png?raw=true">
+      <img src="https://github.com/mainprograming/cide-bizz/blob/main/photo/cont5/cont5_7.png?raw=true">
+      <img src="https://github.com/mainprograming/cide-bizz/blob/main/photo/cont5/cont5_8.png?raw=true">
+      <img src="https://github.com/mainprograming/cide-bizz/blob/main/photo/cont5/cont5_9.png?raw=true">
+      <img src="https://github.com/mainprograming/cide-bizz/blob/main/photo/cont5/cont5_10.png?raw=true">
     </div>
   </div>
   <div class="question">
@@ -243,7 +243,7 @@
  <footer>
     <div class="footer-contents">
       <div class="footer-content">
-        <img src="file:///C:/Users/%E7%9B%B8%E9%A6%AC%E6%98%A5%E8%B2%B4/Desktop/Programing/html/Visual%20Studio%20Code/1.code%E7%B7%B4%E7%BF%92/1.LP/side%20bizz/photo/logo/logo.png">
+        <img src="https://github.com/mainprograming/cide-bizz/blob/main/photo/logo/logo.png?raw=true">
         <ul>
           <li><a href="#">ログイン</a></li>
           <li><a href="#">会員登録</a></li>
@@ -267,3 +267,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
